Fix bug where bottom axis title was being cutoff and add page title

--- a/style.css
+++ b/style.css
@@ -9,14 +9,18 @@ div.tooltip {
     background: lightgrey;
 }
 
-.title {
+.graph-title {
     display: flex;
     justify-content: center;
     margin-top: 10px;
 }
 
-.title__vs {
+.graph-title__vs {
     margin: 0 10px;
+}
+
+.title {
+    text-align: center;
 }
 
 svg {
